# ha-auto-addon-mdns

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  go.mod  repositories.json
.github/workflows/: publish.yaml
addon/: DOCKERFILE  Dockerfile  config.yaml  start.sh
cmd/auto-mdns/: BUILD.bazel  main.go
gomdns/: BUILD.bazel  go.mod  gomdns.go
ha/: BUILD.bazel  client.go  model.go  model_test.go
mdns/: BUILD.bazel  advertiser.go
proxy/: BUILD.bazel  manager.go
