load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ha",
    srcs = [
        "client.go",
        "model.go",
    ],
    importpath = "ha-addon-auto-mdns/ha",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ha_test",
    srcs = [
        "client.go",
        "model.go",
        "model_test.go",
    ],
    importpath = "ha-addon-auto-mdns/ha",
)
